# Adon

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  SetupScriptLibs  _config.yml  andriod-toolchain.cmake  android.toolchain.cmake  build_android_script.sh  config.cfg  macros-config.cmake  makefile
Adon/: CMakeLists.txt  config.h  fileconfig.cpp  fileconfig.h
Adon/Adem/: CMakeLists.txt  makefile
Adon/Adem/src/: adem.cpp  adem.h  helloworld.cpp  helloworld.h
Adon/Adem/test/: CMakeLists.txt  makefile  xmltestfile.xml
Adon/Adem/test/src/: main.cpp
Adon/AdonObjects/: CMakeLists.txt
Adon/AdonObjects/src/Filesystem/: directory.cpp  directory.h  file.cpp  file.h  filetype.h
Adon/AdonObjects/src/Managers/: filemanager.cpp  filemanager.h  objectmanager.cpp  objectmanager.h  xmlmanager.cpp  xmlmanager.h
Adon/AdonObjects/src/XML/: container.cpp  container.h  model.cpp  model.h  script.cpp  script.h  xml.cpp  xml.h  xmlbase.h  xmldata.cpp  xmldata.h  xmlobject.cpp  xmlobject.h
Adon/AdonObjects/src/thread/: atom.h
Adon/AdonObjects/test/: CMakeLists.txt  xmltestfile.xml
Adon/AdonObjects/test/src/: main.cpp
Adon/AdonScript/: CMakeLists.txt  main.cpp
Adon/AdonScript/src/: luascript.cpp  luascript.h
Adon/Adwin/: CMakeLists.txt
Adon/Adwin/src/: adwin.cpp  adwin.h
Adon/Adwin/test/: CMakeLists.txt
Adon/Adwin/test/src/: main.cpp
Adon/Application/: CMakeLists.txt
Adon/Application/src/: adonapp.cpp  adonapp.h  app.cpp  app.h  main.cpp
Adon/Application/src/GUI/: window.cpp  window.h
Adon/Application/src/Manager/: entitymanager.cpp  entitymanager.h
Adon/Application/src/Objects/: Entity.h  entity.cpp  entity.h
Adon/Editor/: CMakeLists.txt
Adon/Editor/src/: adonapp.cpp  adonapp.h  app.cpp  app.h  window.cpp  window.h
Adon/Editor/test/: CMakeLists.txt
Adon/Editor/test/src/: main.cpp
Adon/EditorObjects/: CMakeLists.txt
Adon/EditorObjects/src/: entitymanager.h  guiobject.cpp  guiobject.h  xmldata.cpp  xmldata.h  xmlstaticfuncs.cpp  xmlstaticfuncs.h
Adon/EditorObjects/test/: CMakeLists.txt  xmltestfile.xml
Adon/EditorObjects/test/src/: main.cpp
Adon/EntityManager/: CMakeLists.txt
Adon/EntityManager/src/: entitymanager.h  xmlreader.cpp  xmlreader.h
Adon/EntityManager/test/: CMakeLists.txt
Adon/EntityManager/test/src/: main.cpp
Adon/Exception/: CMakeLists.txt
Adon/Exception/src/: exception.h
Android/app/: build.gradle
Android/app/src/androidTest/java/com/example/samuel/adon/: ExampleInstrumentedTest.java
Android/app/src/main/: AndroidManifest.xml
Android/app/src/main/res/values/: strings.xml
Android/app/src/test/java/com/example/samuel/adon/: ExampleUnitTest.java
Android/gradle/wrapper/: gradle-wrapper.properties
docs/: Project proposal.docx
extensions/: CMakeLists.txt  README
exts/: CMakeLists.txt
exts/glad/include/glad/: glad.h
exts/glad/src/: glad.c
exts/linmath/: CMakeLists.txt
exts/tinyxml2-master/: CMakeLists.txt
exts/xerces-c-3.2.0/: CMakeLists.txt
