ADD_LIBRARY(exts INTERFACE)

ADD_SUBDIRECTORY(tinyxml2)
if(BUILD_STATIC_LIBS)
SET_TARGET_PROPERTIES(tinyxml2_static PROPERTIES FOLDER "extensions/tinyxml2_static")
set_target_properties(tinyxml2_static
    PROPERTIES
    ARCHIVE_OUTPUT_DIRECTORY "${PROJECT_LIB_DIR}/${CMAKE_BUILD_TYPE}/${ANDROID_PLATFORM}/${ANDROID_ABI}"
    LIBRARY_OUTPUT_DIRECTORY "${PROJECT_LIB_DIR}/${CMAKE_BUILD_TYPE}/${ANDROID_PLATFORM}/${ANDROID_ABI}"
    RUNTIME_OUTPUT_DIRECTORY "${PROJECT_BIN_DIR}/${CMAKE_BUILD_TYPE}/${ANDROID_PLATFORM}/${ANDROID_ABI}"
)
endif()
if(BUILD_SHARED_LIBS)
SET_TARGET_PROPERTIES(tinyxml2 PROPERTIES FOLDER "extensions/tinyxml2_shared")
set_target_properties(tinyxml2
    PROPERTIES
    ARCHIVE_OUTPUT_DIRECTORY "${PROJECT_LIB_DIR}/${CMAKE_BUILD_TYPE}/${ANDROID_PLATFORM}/${ANDROID_ABI}"
    LIBRARY_OUTPUT_DIRECTORY "${PROJECT_LIB_DIR}/${CMAKE_BUILD_TYPE}/${ANDROID_PLATFORM}/${ANDROID_ABI}"
    RUNTIME_OUTPUT_DIRECTORY "${PROJECT_BIN_DIR}/${CMAKE_BUILD_TYPE}/${ANDROID_PLATFORM}/${ANDROID_ABI}"
)
endif()

TARGET_INCLUDE_DIRECTORIES(exts INTERFACE tinyxml2)