PROJECT(Adem) #Adon Entity Manager

#add_definitions(
#  -DHAVE_CONFIG_H=1
#)

SET(INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/include)
SET(SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/src)

FILE(GLOB APP_INCLUDE_HEAD ${INCLUDE_DIR}/*.h)
FILE(GLOB APP_HEAD ${SOURCE_DIR}/*.h)
FILE(GLOB APP_SOURCE ${SOURCE_DIR}/*.cpp)
	
SET(ADEM_FILES ${APP_HEAD} ${APP_SOURCE})
SET(ADEM_SOURCE_FILES ${APP_SOURCE})
SET(ADEM_HEADER_FILES ${APP_HEAD})
SET(ADEM_INCLUDE_FILES ${APP_INCLUDE_HEAD})

#message(STATUS "XERCES_DIR=${XERCES_DIR}")

include_directories(${SOURCE_DIR})

SOURCE_GROUP("Source" FILES ${ADEM_SOURCE_FILES})
SOURCE_GROUP("Header" FILES ${ADEM_HEADER_FILES})
SOURCE_GROUP("Include" FILES ${ADEM_INCLUDE_FILES})

add_library(adem STATIC ${ADEM_FILES})
target_link_libraries(adem tinyxml2 exts)
add_dependencies(adem tinyxml2)

set_target_properties( adem
    PROPERTIES
    ARCHIVE_OUTPUT_DIRECTORY "${ROOT_DIR}/build/adon/adem/lib"
    LIBRARY_OUTPUT_DIRECTORY "${ROOT_DIR}/build/adon/adem/lib"
    RUNTIME_OUTPUT_DIRECTORY "${ROOT_DIR}/build/adon/adem/bin"
)

add_subdirectory(test)

SET_TARGET_PROPERTIES(adem PROPERTIES FOLDER "Adon/Adem")
SET_TARGET_PROPERTIES(adem_tests PROPERTIES FOLDER "Adon/Adem/tests")