PROJECT(Adem) #Adon Entity Manager

SET(INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/include)
SET(SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/src)

FILE(GLOB APP_INCLUDE_HEAD ${INCLUDE_DIR}/*.h)
FILE(GLOB APP_HEAD ${SOURCE_DIR}/*.h)
FILE(GLOB APP_SOURCE ${SOURCE_DIR}/*.cpp)
	
SET(ADEM_FILES ${APP_HEAD} ${APP_SOURCE})
SET(ADEM_SOURCE_FILES ${APP_SOURCE})
SET(ADEM_HEADER_FILES ${APP_HEAD})
SET(ADEM_INCLUDE_FILES ${APP_INCLUDE_HEAD})

message(STATUS "ADEM_HEADER_FILES=${ADEM_HEADER_FILES}")

include_directories(${SOURCE_DIR})

SOURCE_GROUP("Source" FILES ${ADEM_SOURCE_FILES})
SOURCE_GROUP("Header" FILES ${ADEM_HEADER_FILES})
SOURCE_GROUP("Include" FILES ${ADEM_INCLUDE_FILES})

if(BUILD_STATIC_LIBS)
add_library(adem_static STATIC ${ADEM_FILES})
target_link_libraries(adem_static tinyxml2_static exts)
add_dependencies(adem_static tinyxml2_static)

set_target_properties(adem_static
    PROPERTIES
    ARCHIVE_OUTPUT_DIRECTORY "${ROOT_DIR}/output/adon/adem/lib"
    LIBRARY_OUTPUT_DIRECTORY "${ROOT_DIR}/output/adon/adem/lib"
    RUNTIME_OUTPUT_DIRECTORY "${ROOT_DIR}/output/adon/adem/bin"
)
endif()

MESSAGE(STATUS "CMAKE_C_COMPILER_TARGET=${CMAKE_C_COMPILER_TARGET}")
MESSAGE(STATUS "CMAKE_C_COMPILER_EXTERNAL_TOOLCHAIN=${CMAKE_C_COMPILER_EXTERNAL_TOOLCHAIN}")
MESSAGE(STATUS "ANDROID_AR=${ANDROID_AR}")
MESSAGE(STATUS "ANDROID_RANLIB=${ANDROID_RANLIB}")
MESSAGE(STATUS "ANDROID_ABI=${ANDROID_ABI}")

if(BUILD_SHARED_LIBS)
add_library(adem SHARED ${ADEM_FILES})
target_link_libraries(adem tinyxml2 exts)
add_dependencies(adem tinyxml2)
	set_target_properties(adem
	PROPERTIES
	ARCHIVE_OUTPUT_DIRECTORY "${ROOT_DIR}/output/adon/adem/lib/${ANDROID_ABI}"
	LIBRARY_OUTPUT_DIRECTORY "${ROOT_DIR}/output/adon/adem/lib/${ANDROID_ABI}"
	RUNTIME_OUTPUT_DIRECTORY "${ROOT_DIR}/output/adon/adem/bin/${ANDROID_ABI}"
)
endif()

add_subdirectory(test)

if(BUILD_STATIC_LIBS)
SET_TARGET_PROPERTIES(adem_static PROPERTIES FOLDER "Adon/Adem")
endif()
if(BUILD_SHARED_LIBS)
SET_TARGET_PROPERTIES(adem PROPERTIES FOLDER "Adon/Adem")
endif()
SET_TARGET_PROPERTIES(adem_tests PROPERTIES FOLDER "Adon/Adem/tests")