if(${CMAKE_SYSTEM_NAME} MATCHES "Windows" OR
	${CMAKE_SYSTEM_NAME} MATCHES "Darwin" OR
	${CMAKE_SYSTEM_NAME} MATCHES "Linux")

PROJECT(Adwin) # Adon Window

include(GenerateExportHeader)

SET(INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/include)
SET(SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/src)

FILE(GLOB APP_INCLUDE_HEAD ${INCLUDE_DIR}/*.h)
FILE(GLOB APP_HEAD ${SOURCE_DIR}/*.h)
FILE(GLOB APP_SOURCE ${SOURCE_DIR}/*.cpp)

SET(ADWIN_FILES ${APP_HEAD} ${APP_SOURCE})
SET(ADWIN_SOURCE_FILES ${APP_SOURCE})
SET(ADWIN_HEADER_FILES ${APP_HEAD})
SET(ADWIN_INCLUDE_FILES ${APP_INCLUDE_HEAD})

include_directories(${SOURCE_DIR} ${OPENGL_LIBRARIES} ${EXTS_INCLUDES_DIR})

#message("MESSAGE=${EXTS_INCLUDES_DIR}")

SOURCE_GROUP("Source" FILES ${ADWIN_SOURCE_FILES})
SOURCE_GROUP("Header" FILES ${ADWIN_HEADER_FILES})
SOURCE_GROUP("Include" FILES ${ADWIN_INCLUDE_FILES})

if(BUILD_SHARED_LIBS)
add_library(adwin SHARED ${ADWIN_FILES})
target_link_libraries(adwin glad glfw exts ${OPENGL_LIBRARIES})
generate_export_header(adwin EXPORT_FILE_NAME ${PROJECT_EXPORT_DIR}/adwin_export.h)
add_dependencies(adwin glfw exts)
target_include_directories(adwin PUBLIC ${PROJECT_EXPORT_DIR} ${EXTS_INCLUDES_DIR})
OS_BUILD_MACRO(adwin)
endif()

add_subdirectory(test)

if(BUILD_STATIC_LIBS)
SET_TARGET_PROPERTIES(adwin_static PROPERTIES FOLDER "Adon/Adwin")
endif()
if(BUILD_SHARED_LIBS)
SET_TARGET_PROPERTIES(adwin PROPERTIES FOLDER "Adon/Adwin")
endif()

SET_TARGET_PROPERTIES(adwin_test PROPERTIES FOLDER "Adon/Adwin/test")
endif()
